--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "ws_server_test.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "npm ws_server_test.js"
+     "start": "node ws_server_test.js"
   },
   "repository": {
     "type": "git",
